# lumi

./: .gitignore  Cargo.toml  README.md
inference/: Cargo.toml  README.md
inference/benchmarks/: arc_easy.txt  winogrande.txt
inference/src/: eval.rs  main.rs  metal_ssm.rs  model.rs  ssm_step.metal
scripts/: export_native_safetensors.py
training/: Cargo.toml  Dockerfile  build.rs
training/csrc/: cublas_ops.cu  elementwise_ops.cu  ssm_scan.cu  ssm_scan.h
training/src/: checkpoint.rs  config.rs  data.rs  gpu_memory.rs  lib.rs  main.rs  native_checkpoint.rs  native_ops.rs  native_trainer.rs  tokenizer.rs
training/tests/: checkpoint_tests.rs  config_tests.rs  data_tests.rs  training_init_tests.rs
