[package]
name = "lumi"
version = "0.2.0"
edition = "2021"
description = "Lumi — a hybrid Mamba-3 language model trained on curated elementary-level data"

[features]
default = ["cpu"]
cpu = []
cuda = []

[dependencies]
tokenizers = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
